--- a/Be Green/site/hazteDonador.html
+++ b/Be Green/site/hazteDonador.html
@@ -46,8 +46,9 @@
                     <!-- RD Navbar Nav-->
                     <ul class="rd-navbar-nav">
                       <li class="rd-nav-item"><a class="rd-nav-link" href="sobreNosotros.html">SOBRE NOSOTROS</a></li>
-                      <li class="rd-nav-item"><a class="rd-nav-link" href="#">INFORME DE TRANSPARENCIA</a></li>
-                      <li class="rd-nav-item"><a class="rd-nav-link" href="#contact">CONTACTO</a></li>
+                      <li class="rd-nav-item"><a class="rd-nav-link" href="iniciarSesionDonador.html">DONADORES</a></li>
+                      <li class="rd-nav-item"><a class="rd-nav-link" href="productos.html">PRODUCTOS</a></li>
+                      <li class="rd-nav-item"><a class="rd-nav-link" href="#contact" >CONTACTO</a></li>
                     </ul>
                   </div>
                 </div>
@@ -65,21 +66,21 @@
         </div>
       </header>
       <!--  -->
-      <section class="parallax-container" data-parallax-img="images/bg-breadcrumbs-about1.jpg">
+      <section class="parallax-container" data-parallax-img="https://cdn.discordapp.com/attachments/959562345963733056/959564642781368370/76290.webp">
         <div class="parallax-content breadcrumbs-custom context-dark">
           <div class="container">
             <div class="row justify-content-center">
               <div class="col-12 col-lg-9">
-                <h3 class="breadcrumbs-custom-title">INSCRÍBETE PARA SER DONADOR DE LA FUNDACIÓN APOYO</h3>
-                <p>¡HOY TE NECESITAMOS MÁS QUE NUNCA!<br>ENTRE TODOS CUIDEMOS A LAS PERSONAS MAYORES MÁS VULNERABLES DEL PAÍS.</p>
+                <h3 class="breadcrumbs-custom-title">INSCRÍBETE PARA SER DONADOR DE BE GREEN</h3>
+                <p>¡HOY TE NECESITAMOS MÁS QUE NUNCA!<br>PUEDES DAR UNA DONACIÓN CON PLANTA O MONETARIA.</p>
                 <br>
                 <p>Selecciona una opción:</p>
                 <div id="contenedorOpcionDonador">
                   <div id="cuentaCorriente">
-                    <a class="section section-banner d-none d-xl-flex" href="sistemaDonación.html" >DONACIÓN ÚNICA</a>
+                    <a class="section section-banner d-none d-xl-flex" href="sistemaDonación.html" >DONACIÓN MONETARIA</a>
                   </div>
                   <div id="tarjetaCredito">
-                    <a class="section section-banner d-none d-xl-flex" href="sistemaDonación.html" >DONACIÓN MENSUAL</a>
+                    <a class="section section-banner d-none d-xl-flex" href="sistemaDonación.html" >DONACIÓN PLANTA</a>
                   </div>
               </div>
             </div>
@@ -133,10 +134,9 @@
               <div class="col-12">
                 <ul class="footer-minimal-nav">
                   <li><a href="sobreNosotros.html">SOBRE NOSOTROS</a></li>
-                  <li><a href="#">CAUSAS</a></li>
-                  <li><a href="#">GALERÍA</a></li>
-                  <li><a href="#">EQUIPO</a></li>
-                  <li><a href="#contact">CONTACTOS</a></li>
+                  <li><a href="iniciarSesionDonador.html">DONADORES</a></li>
+                  <li><a href="productos.html">PRODUCTOS</a></li>
+                  <li><a href="contacto.html">CONTACTOS</a></li>
                 </ul>
               </div>
               <div class="col-12">
