--- a/Be Green/site/index.html
+++ b/Be Green/site/index.html
@@ -33,7 +33,8 @@
               <div class="rd-navbar-main">
                 <!-- RD Navbar Panel-->
                 <div class="rd-navbar-panel">
-
+                  <!-- RD Navbar Toggle-->
+                  <button class="rd-navbar-toggle" data-rd-navbar-toggle=".rd-navbar-nav-wrap"><span></span></button>
                   <!-- RD Navbar Brand-->
                   <div class="rd-navbar-brand"><a href="index.html"><img class="brand-logo-light" src="https://cdn.discordapp.com/attachments/943714816843997185/996915602822271116/Diseno_sin_titulo_2.png" width="100" height="51"/></a></div>
                 </div> 
@@ -142,7 +143,7 @@
                   <li><a href="sobreNosotros.html">SOBRE NOSOTROS</a></li>
                   <li><a href="iniciarSesionDonador.html">DONADORES</a></li>
                   <li><a href="productos.html">PRODUCTOS</a></li>
-                  <li><a href="contacto.html">CONTACTO</a></li>
+                  <li><a href="contacto.html">CONTACTOS</a></li>
                 </ul>
               </div>
               <div class="col-12">
