--- a/Be Green/site/sistemaDonación.html
+++ b/Be Green/site/sistemaDonación.html
@@ -101,9 +101,8 @@
               <div class="col-12">
                 <ul class="footer-minimal-nav">
                   <li><a href="sobreNosotros.html">SOBRE NOSOTROS</a></li>
-                  <li><a href="#">CAUSAS</a></li>
-                  <li><a href="#">GALERÍA</a></li>
-                  <li><a href="#">EQUIPO</a></li>
+                  <li><a href="iniciarSesionDonador.html">DONADORES</a></li>
+                  <li><a href="productos.html">PRODUCTOS</a></li>
                   <li><a href="contacto.html">CONTACTOS</a></li>
                 </ul>
               </div>
