--- a/Be Green/site/PagDonador.html
+++ b/Be Green/site/PagDonador.html
@@ -82,11 +82,10 @@
               <div class="col-12"><a href="index.html"><img src="https://cdn.discordapp.com/attachments/943714816843997185/996915602822271116/Diseno_sin_titulo_2.png" alt="" width="207" height="51"/></a></div>
               <div class="col-12">
                 <ul class="footer-minimal-nav">
-                  <li><a href="sobreNosotros.html">SOBRE NOSOTROS</a></li>
-                  <li><a href="#">DONADORES</a></li>
-                  <li><a href="#">PRODUCTOS</a></li>
-                  <li><a href="#">EQUIPO</a></li>
-                  <li><a href="contacto.html">CONTACTOS</a></li>
+                  <li class="rd-nav-item"><a class="rd-nav-link" href="sobreNosotros.html">SOBRE NOSOTROS</a></li>
+                  <li class="rd-nav-item"><a class="rd-nav-link" href="donadores.html">DONADORES</a></li>
+                  <li class="rd-nav-item"><a class="rd-nav-link" href="#">PRODUCTOS</a></li>
+                  <li class="rd-nav-item"><a class="rd-nav-link" href="#contact">CONTACTO</a></li>
                 </ul>
               </div>
               <div class="col-12">
