--- a/Be Green/site/sistemaDonación.html
+++ b/Be Green/site/sistemaDonación.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html class="wide wow-animation" lang="en">
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Sistema de donación</title>
     <meta charset="utf-8">
@@ -70,22 +71,89 @@
             <div class="row justify-content-center">
               <div class="col-12 col-lg-9">
                 <h2 class="breadcrumbs-custom-title">Gracias por tu ayuda</h2>
-                <p>Una ejecutiva te contactará para hacer efectiva tu donación mensual</p>
+                <h4>RECUERDA: SI DONAS UNA PLANTA NO DEBES RELLENAR EL CAMPO: " MONTO A DONAR "</h4>
                 <div class="login-register">
-                  <p>R.U.N</p>
-                  <input class="controls" type="text" name="rut" id="rut" placeholder="Ingrese su RUN">
-                  <p>Nombre y Apellido</p>
-                  <input class="controls" type="text" name="nombreCompleto" id="nombreCompleto" placeholder="Ingrese su Nombre y Apellido">
-                  <p>Correo</p>
-                  <input class="controls" type="email" name="correo" id="correo" placeholder="Ingrese su Correo">
-                  <p>Número de tarjeta</p>
-                  <input class="controls" type="text" name="numeroTarjeta" id="numeroTarjeta" placeholder="1234567890123456">
-                  <p>Seleccione un banco</p>
-                  <input class="controls" type="text" name="banco" id="banco" placeholder="-----">
-                  <p>Tu donación</p>
-                  <input class="controls" type="text" name="rut" id="rut" placeholder="$">
+                  
+		<form action="" class="formulario" id="formulario">
+			<!-- Grupo: Nombre -->
+			<div class="formulario__grupo" id="grupo__usuario">
+				<label for="usuario" class="formulario__label">Nombres</label>
+				<div class="formulario__grupo-input">
+					<input type="text" class="formulario__input" name="usuario" id="usuario" placeholder="Pedro Pablo">
+					<i class="formulario__validacion-estado fas fa-times-circle"></i>
+				</div>
+				<p class="formulario__input-error">Debe Ingresar Nombres Validos</p>
+			</div>
+
+			<!-- Grupo: Apellidos -->
+			<div class="formulario__grupo" id="grupo__nombre">
+				<label for="nombre" class="formulario__label">Apellidos</label>
+				<div class="formulario__grupo-input">
+					<input type="text" class="formulario__input" name="nombre" id="nombre" placeholder="Hormazabal Rodriguez">
+					<i class="formulario__validacion-estado fas fa-times-circle"></i>
+				</div>
+				<p class="formulario__input-error">Debe Ingresar Apellidos Validos.</p>
+			</div>
+
+			<!-- Grupo: Tipo de Donacion -->
+			<div class="formulario__grupo" id="grupo__password">
+				<label for="password" class="formulario__label">Tipo de donación</label>
+				<div class="formulario__grupo-input">
+					<input type="text" class="formulario__input" name="password" id="password" placeholder="Monetaria o Planta">
+					<i class="formulario__validacion-estado fas fa-times-circle"></i>
+				</div>
+				<p class="formulario__input-error">Ingrese tipo de donación</p>
+			</div>
+
+			<!-- Grupo: Monto-->
+			<div class="formulario__grupo" id="grupo__password2">
+				<label for="password2" class="formulario__label">Monto a donar</label>
+				<div class="formulario__grupo-input">
+					<input type="text" class="formulario__input" name="password2" id="password2">
+					<i class="formulario__validacion-estado fas fa-times-circle"></i>
+				</div>
+				<p class="formulario__input-error">Ingrese Monto.</p>
+			</div>
+
+			<!-- Grupo: Correo Electronico -->
+			<div class="formulario__grupo" id="grupo__correo">
+				<label for="correo" class="formulario__label">Correo Electrónico</label>
+				<div class="formulario__grupo-input">
+					<input type="email" class="formulario__input" name="correo" id="correo" placeholder="correo@correo.com">
+					<i class="formulario__validacion-estado fas fa-times-circle"></i>
+				</div>
+				<p class="formulario__input-error">Ingrese Correo Valido.</p>
+			</div>
+
+			<!-- Grupo: Teléfono -->
+			<div class="formulario__grupo" id="grupo__telefono">
+				<label for="telefono" class="formulario__label">Teléfono</label>
+				<div class="formulario__grupo-input">
+					<input type="text" class="formulario__input" name="telefono" id="telefono" placeholder="91111111">
+					<i class="formulario__validacion-estado fas fa-times-circle"></i>
+				</div>
+				<p class="formulario__input-error">Ingrese Telefono Valido.</p>
+			</div>
+
+			<!-- Grupo: Terminos y Condiciones -->
+			<div class="formulario__grupo" id="grupo__terminos">
+				<label class="formulario__label">
+					<input class="formulario__checkbox" type="checkbox" name="terminos" id="terminos">
+					Acepto los Terminos y Condiciones
+				</label>
+			</div>
+
+			<div class="formulario__mensaje" id="formulario__mensaje">
+				<p><i class="fas fa-exclamation-triangle"></i> <b>Error:</b> Por favor rellena el formulario correctamente. </p>
+			</div>
+
+			<div class="formulario__grupo formulario__grupo-btn-enviar">
+				<button type="submit" class="formulario__btn">Enviar</button>
+				<p class="formulario__mensaje-exito" id="formulario__mensaje-exito">Formulario enviado exitosamente!</p>
+			</div>
+		</form>
                   <!-- BOTON DONAR -->
-                  <a class="button button-primary button-sm" href="index.html">DONAR</a>
+                  <a class="button button-primary button-sm" href="">DONAR</a>
                 </div>
               </div>
             </div>
