--- a/Be Green/site/sistemaDonación.html
+++ b/Be Green/site/sistemaDonación.html
@@ -71,7 +71,8 @@
             <div class="row justify-content-center">
               <div class="col-12 col-lg-9">
                 <h2 class="breadcrumbs-custom-title">Gracias por tu ayuda</h2>
-                <h4>RECUERDA: SI DONAS UNA PLANTA NO DEBES RELLENAR EL CAMPO: " MONTO A DONAR "</h4>
+                <br>
+                <h6>RECUERDA: SI DONAS UNA PLANTA NO DEBES RELLENAR EL CAMPO: " MONTO A DONAR "</h6>
                 <div class="login-register">
                   
 		<form action="" class="formulario" id="formulario">
@@ -148,12 +149,11 @@
 			</div>
 
 			<div class="formulario__grupo formulario__grupo-btn-enviar">
-				<button type="submit" class="formulario__btn">Enviar</button>
 				<p class="formulario__mensaje-exito" id="formulario__mensaje-exito">Formulario enviado exitosamente!</p>
 			</div>
 		</form>
                   <!-- BOTON DONAR -->
-                  <a class="button button-primary button-sm" href="">DONAR</a>
+                  <a class="button button-primary button-sm" href="">ENVIAR</a>
                 </div>
               </div>
             </div>
