--- a/Be Green/site/PagDonador.html
+++ b/Be Green/site/PagDonador.html
@@ -67,8 +67,22 @@
           <div class="container">
             <div class="row justify-content-center">
               <div class="col-12 col-lg-9">
-                <h2 class="breadcrumbs-custom-title">Donadores</h2>
-                <p>----------------------------------</p>
+                <h2 class="breadcrumbs-custom-title">!Bienvenido!</h2>
+                <p>Donaciones realizadas por ti</p>
+                <table>
+                  <tr>
+                    <th>ID</th>
+                    <th>FECHA</th>
+                    <th>MONTO</th>
+                    <th>TARJETA</th>
+                  </tr>
+                  <tr>
+                    <td>D001</td>
+                    <td>14/07/2022</td>
+                    <td>$20.000</td>
+                    <td>4589</td>
+                  </tr>
+                </table>
               </div>
             </div>
           </div>
