--- a/Be Green/site/iniciarSesionDonador.html
+++ b/Be Green/site/iniciarSesionDonador.html
@@ -91,7 +91,7 @@
                   <li><a href="sobreNosotros.html">SOBRE NOSOTROS</a></li>
                   <li><a href="iniciarSesionDonador.html">DONADORES</a></li>
                   <li><a href="productos.html">PRODUCTOS</a></li>
-                  <li><a href="contacto.html">CONTACTO</a></li>
+                  <li><a href="">CONTACTO</a></li>
                 </ul>
               </div>
               <div class="col-12">
