--- a/Be Green/site/sobreNosotros.html
+++ b/Be Green/site/sobreNosotros.html
@@ -110,7 +110,7 @@
                   <li><a href="sobreNosotros.html">SOBRE NOSOTROS</a></li>
                   <li><a href="iniciarSesionDonador.html">DONADORES</a></li>
                   <li><a href="productos.html">PRODUCTOS</a></li>
-                  <li><a href="contacto.html">CONTACTOS</a></li>
+                  <li><a href="">CONTACTOS</a></li>
                 </ul>
               </div>
               <div class="col-12">
