--- a/Be Green/site/productos.html
+++ b/Be Green/site/productos.html
@@ -43,7 +43,7 @@
                     <!-- RD Navbar Nav-->
                     <ul class="rd-navbar-nav">
                       <li class="rd-nav-item"><a class="rd-nav-link" href="sobreNosotros.html">SOBRE NOSOTROS</a></li>
-                      <li class="rd-nav-item"><a class="rd-nav-link" href="donadores.html">DONADORES</a></li>
+                      <li class="rd-nav-item"><a class="rd-nav-link" href="iniciarSesionDonador.html">DONADORES</a></li>
                       <li class="rd-nav-item"><a class="rd-nav-link" href="#">PRODUCTOS</a></li>
                       <li class="rd-nav-item"><a class="rd-nav-link" href="#contact">CONTACTO</a></li>
                     </ul>
